BUGFIX: grid-layout option units switched to fr to work with grid-gap, grid-gap added, $grid-gutter slightly increased

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/_Variables.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/_Variables.scss
@@ -85,7 +85,7 @@ $layout-small-width: 750px;
 $centered-layout: true !default;
 
 // Inner spacing for all grid-items.
-$column-gutter: 26px !default;
+$column-gutter: 30px !default;
 
 // The background which will be set on the <body> element.
 $body-background: #fff !default;
